turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:2: error: Missing closing brace `}' assumed here
def step(rule:Array[Char], colors:Array[Color]) {
^LangtonsAnt:10: error: Missing closing brace `}' assumed here
}
^