turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def step(rule:Array[Char], colors:Array[Color]) {
	for(i<- 0 to colors.length){
	if(setCouleurSol()==colors(i){
		setCouleurBrosse(Color(i))
		baisseBrosse
		leveBrosse
		rule(i)
		avance()
}
